<resources>
    <string name="app_name">NaBalad</string>
    <string name="bookmark">Bookmark</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="bookmark_image">Bookmark Image</string>
    <string name="my_bookmark_sample">My bookmark</string>
    <string name="latlng_sample">37.43232, 54.5454</string>
    <string name="search">Search</string>
    <string name="gps">GPS</string>
    <string name="setting">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="delete_data">Delete Data</string>
    <string name="save_location">Save Location</string>
    <string name="name">name</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="filter_bookmarks">Filter bookmarks</string>
    <string name="bookmarks_not_found">There is no bookmarks :(</string>
    <string name="bookmark_is_added_msg">Bookmark added successfully</string>
    <string name="no_network">No Network Available</string>
    <string name="success">Success</string>
</resources>